# SkiaCmake

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/skia/skia/com/skiacmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/skia/skia/com/skiacmake/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/skia/skia/com/skiacmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
